Fix bolder fonts on Firefox

--- a/app/assets/stylesheets/_general.scss
+++ b/app/assets/stylesheets/_general.scss
@@ -3,6 +3,8 @@
 
 html { 
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 body{
